Bug 386610 - "pyxpcom fails to build against python 2.5 (api changed)" [p=asac@jwsdot.com (Alexander Sack) r=mhammond (NPOTB)]